fixes photo styling on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -137,7 +137,7 @@ small {
 }
 
 .container {
-    width: min(100% - 2rem, 1200px);
+    width: min(100% - 2rem, 1240px);
     margin-inline: auto;
 }
 
@@ -226,35 +226,36 @@ small {
 
 .hero__images>img {
     background: var(--clr-photo-background);
-    padding: 2em 2em 6em 2em;
+    padding: 1.8em 1.8em 5em 1.8em;
     border: none;
     border-radius: 7px;
 }
 
 .hero__image--one {
     position: relative;
-    top: 190px;
-    left: 100px;
+    top: 150px;
+    left: -10px;
     right: 0;
     bottom: 0;
-    transform: rotate(-20deg);
+    transform: rotate(-25deg);
 }
 
 .hero__image--two {
     position: relative;
-    top: -20px;
-    left: 0;
+    top: -40px;
+    left: -100px;
     right: 0;
     bottom: 0;
+    transform: rotate(15deg);
 }
 
 .hero__image--three {
     position: relative;
     top: 250px;
-    left: -380px;
+    left: -500px;
     right: 0;
     bottom: 0;
-    transform: rotate(20deg);
+    transform: rotate(25deg);
 }
 
 .title {
@@ -322,7 +323,6 @@ small {
     font-size: var(--fs-post-title);
     text-wrap: nowrap;
     margin-right: 1.5em;
-    å
 }
 
 .tag {
@@ -364,6 +364,22 @@ footer {
     .nav {
         justify-content: flex-start;
 
+    }
+
+    .hero__image--one {
+        top: 80px;
+        left: -10px;
+    }
+
+    .hero__image--two {
+        top: 10px;
+        left: -120px;
+        transform: rotate(20deg);
+    }
+
+    .hero__image--three {
+        top: 250px;
+        left: -580px;
     }
 
     .tags-container {
